angular bootstrap collapse doesn't work, don't use fixed nav until it does

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -4,7 +4,6 @@ $color_subtitle: darkslateblue;
 @import "bootstrap";
 
 body {
-  padding-top: 60px;
   background: url(image_path('background.jpeg')) 0 0 repeat;
   background-attachment: fixed;
   font-family: "ProximaNova",Helvetica,Arial,"Lucida Grande",sans-serif;
